--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kshitij Yadav</title>
+    <title>Manaswi Mishra</title>
     <link rel="shortcut icon" href="img/a-icon.ico" />
 
     <!-- Bootstrap Core CSS -->
@@ -68,7 +68,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Kshitij Yadav</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Manaswi Mishra</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>HI! I'M Kshitij Yadav</h1>
+                <h1>HI! I'M Manaswi Mishra</h1>
                 <hr>
                 <p><font color="#0E8A10"></font>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
@@ -110,9 +110,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
-                    <p class="text-faded">Kshitij Yadav has garnered a deep and foundational academic base of knowledge along with practical real world experience in the field of data science. In charting his rise from an early Business Associate to his most recent role as an Data Science Intern with Colaberry, MA, United States, he has been successful in gaining deep working knowledge of Data Science in various industries. His experience is substantive and multifaceted.</p>
+                    <p class="text-faded">Manaswi Mishra has garnered a deep and foundational academic base of knowledge along with practical real world experience in the field of data science. In charting his rise from an early Business Associate to his most recent role as an Assistant Manager/ Data Science- Business Consulting at HSBC, has been successful in gaining deep working knowledge of Data Science and it's various applications. His experience is substantive and multifaceted.</p>
                     <p class="text-faded"> In his previous roles as Data Scientist and Analytics Associate, he developed his expertise in the field of Machine Learning and Data Science, developing algorithms, fine tunining them, building predictive models and successfully delivering his results to clients and leaders with his Data Visualization skills. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
-                    <p class="text-faded">Click to download Kshitij's resume<p>
+                    <p class="text-faded">Click to download Manaswi's resume<p>
                     <a class="btn btn-primary btn-xl" href="/file/Resume.pdf" download>My Resume</a>
                 </div>
             </div>
@@ -251,16 +251,16 @@
                     <hr class="primary">
                 </div>
                 <div class="col-lg-2 col-lg-offset-3 text-center">
-                    <a href="https://github.com/kshitijyad" class="fa fa-github fa-3x wow bounceIn"></a>
+                    <a href="https://github.com/manaswimishra" class="fa fa-github fa-3x wow bounceIn"></a>
                 </div>
                 <div class="col-lg-2  text-center">
-                    <a href="https://www.linkedin.com/in/kshitijyad" class="fa fa-linkedin fa-3x wow bounceIn"></a>
+                    <a href="https://www.linkedin.com/in/manaswi-mishra-60150457" class="fa fa-linkedin fa-3x wow bounceIn"></a>
                 </div>
                 <!--div class="col-lg-1 text-center">
                     <a class="fa fa-phone fa-3x wow bounceIn"></i>
                 </div-->
                 <div class="col-lg-2 text-center">
-                    <a href="mailto:kshitijyad@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
+                    <a href="mailto:manaswimishra11@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
                 </div>
             </div>
         </div>
