--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="header-content-inner">
                 <h1>HI! I'M Manaswi Mishra</h1>
                 <hr>
-                <p><font color="#0E8A10"></font>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
+                <p><font color="#0E8A10"></font>Data is the sword of the 21st century, those who wield it well, the samurai! - Jonathan Rosenberg</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
@@ -111,7 +111,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
                     <p class="text-faded">Manaswi Mishra has garnered a deep and foundational academic base of knowledge along with practical real world experience in the field of data science. In charting his rise from an early Business Associate to his most recent role as an Assistant Manager/ Data Science- Business Consulting at HSBC, has been successful in gaining deep working knowledge of Data Science and it's various applications. His experience is substantive and multifaceted.</p>
-                    <p class="text-faded"> In his previous roles as Data Scientist and Analytics Associate, he developed his expertise in the field of Machine Learning and Data Science, developing algorithms, fine tunining them, building predictive models and successfully delivering his results to clients and leaders with his Data Visualization skills. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
+                    <p class="text-faded"> In his previous roles as Data Scientist, he developed his expertise in the field of Machine Learning and Data Science, developing algorithms, fine tunining them, building predictive models and successfully delivering his results to clients and leaders with his Data Visualization skills. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
                     <p class="text-faded">Click to download Manaswi's resume<p>
                     <a class="btn btn-primary btn-xl" href="/file/Resume.pdf" download>My Resume</a>
                 </div>
@@ -132,93 +132,93 @@
             <div class="row no-gutter">
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/CreditAnalysis/blob/master/Credit_Analysis.ipynb" class="portfolio-box" >
+                        <a href="https://github.com/manaswimishra/F1-Australia-JB-data/blob/master/Jenson%20Button%20F1%20Telemetry.ipynb" class="portfolio-box" >
                             <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
-                                      Machine Learning
+                                      Statistical Significance
                                   </div>
                                     <div class="project-name">
-                                        Credit Analysis
+                                        Formula 1 Telemetry Data Analysis
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Credit Analysis</h3></br>
+                        <h3 style="text-align: center">Formula 1 Telemetry Data Analysis</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/RiskProfilingandAnalysis/blob/master/RiskProfilingandAnalysis-Insurance.ipynb" class="portfolio-box">
+                        <a href="https://github.com/manaswimishra/MotoGp-Data-Scraping/blob/master/Motogp%20Data%20download.ipynb" class="portfolio-box">
                             <img src="img/portfolio/3.png" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
-                                      Risk Analysis
+                                      MotoGP Web Scraping
                                   </div>
                                     <div class="project-name">
-                                        Risk and Severity 
+                                        Data Creation + Analysis 
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Risk and Severity </h3></br>
+                        <h3 style="text-align: center">Data Creation + Analysis </h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/USAMassShooting/blob/master/MassShooting.ipynb" class="portfolio-box">
+                        <a href="https://github.com/manaswimishra/Cardinals-MLB-Data" class="portfolio-box">
                             <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Data Mining and Analytics
+                                        Sports Analytics
                                     </div>
                                     <div class="project-name">
-                                        Mass Shooting
+                                        Major League Baseball
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Mass Shooting</h3></br>
+                        <h3 style="text-align: center">Major League Baseball</h3></br>
                     </div>
                 </div>
     
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/IRIS_Data_Analysis/blob/master/IRIS.ipynb" class="portfolio-box">
+                        <a href="https://github.com/andrewjmorse/ubs2019" class="portfolio-box">
                             <img src="img/portfolio/5.jpg"  class="img-responsive" alt="">
-                            <div class="portfolio-box-caption">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-category text-faded">
-                                        Machine Learning
-                                    </div>
-                                    <div class="project-name">
-                                        IRIS Dataset
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <h3 style="text-align: center">IRIS Dataset</h3></br>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
-                    <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/TimeSeriesAnalysis/blob/master/Time-SeriesAnalysis.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
                                         Time Series Analysis
                                     </div>
                                     <div class="project-name">
-                                        Time Series Analysis (ARIMA and RNN)
+                                        Market Sector Rotation
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Time Series Analysis</h3></br>
+                        <h3 style="text-align: center">Market Sector Rotation</h3></br>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/MichaelSetyawan/RegensteinKaggleAshrae" class="portfolio-box">
+                            <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Energy Prediction
+                                    </div>
+                                    <div class="project-name">
+                                        Data Analysis and Forecasting
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">Energy Prediction</h3></br>
                     </div>
                 </div>
                  <div class="col-lg-3 col-lg-offset-1 col-sm-4">
