--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/manaswimishra/MotoGp-Data-Scraping/blob/master/Motogp%20Data%20download.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/3.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Data Creation + Analysis </h3></br>
+                        <h3 style="text-align: center">MotoGP Web Scraping</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
@@ -188,7 +188,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/andrewjmorse/ubs2019" class="portfolio-box">
-                            <img src="img/portfolio/5.jpg"  class="img-responsive" alt="">
+                            <img src="img/portfolio/3.png"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
