--- a/index.html
+++ b/index.html
@@ -223,20 +223,20 @@
                 </div>
                  <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/IMDB_Tensor_Flow/blob/master/IMDB_Movie_Rating.ipynb" class="portfolio-box">
+                        <a href="https://github.com/manaswimishra/Risk-Profiling-and-Analysis/blob/master/RiskProfilingandAnalysis-Insurance.ipynb" class="portfolio-box">
                             <img src="img/portfolio/6.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Tensor Flow
+                                        Risk Analysis
                                     </div>
                                     <div class="project-name">
-                                        IMDB Rating Prediction
+                                        Risk and Severity
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Tensor Flow</h3></br>
+                        <h3 style="text-align: center">Risk and Severity</h3></br>
                     </div>
                 </div>
             </div>
