--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/manaswimishra/F1-Australia-JB-data/blob/master/Jenson%20Button%20F1%20Telemetry.ipynb" class="portfolio-box" >
-                            <img src="img/portfolio/1.jpg" alt="">
+                            <img src="img/portfolio/1.jpg" width="200" height="40" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
