--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/manaswimishra/F1-Australia-JB-data/blob/master/Jenson%20Button%20F1%20Telemetry.ipynb" class="portfolio-box" >
-                            <img src="img/portfolio/1.jpg" width="250" height="400" alt="">
+                            <img src="img/portfolio/1.jpg" width="300" height="350" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
@@ -151,7 +151,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/manaswimishra/MotoGp-Data-Scraping/blob/master/Motogp%20Data%20download.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/3.jpg" height="350" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
