--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                                       Statistical Significance
                                   </div>
                                     <div class="project-name">
-                                        Formula 1 Telemetry Data Analysis
+                                        F1 Telemetry Data Analysis
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Formula 1 Telemetry Data Analysis</h3></br>
+                        <h3 style="text-align: center">F1 Telemetry Data Analysis</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
