--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="header-content-inner">
                 <h1>HI! I'M Manaswi Mishra</h1>
                 <hr>
-                <p><font color="#0E8A10"></font>Data is the sword of the 21st century, those who wield it well, the samurai! - Jonathan Rosenberg</p>
+                <p><font color="#FDFEFE"></font>Data is the sword of the 21st century, those who wield it well, the samurai! - Jonathan Rosenberg</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
