--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="author" content="">
 
     <title>Manaswi Mishra</title>
-    <link rel="shortcut icon" href="img/a-icon.ico" />
+    <link rel="shortcut icon" href="img/m-icon.ico.jpg" />
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
