--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/manaswimishra/Cardinals-MLB-Data" class="portfolio-box">
+                        <a href="https://github.com/manaswimishra/Cardinals-MLB-Data/blob/master/MLB%20Analysis.pdf" class="portfolio-box">
                             <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
