--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/manaswimishra/F1-Australia-JB-data/blob/master/Jenson%20Button%20F1%20Telemetry.ipynb" class="portfolio-box" >
+                        <a href="https://github.com/manaswimishra/F1-Australia-JB-data" class="portfolio-box" >
                             <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/manaswimishra/MotoGp-Data-Scraping/blob/master/Motogp%20Data%20download.ipynb" class="portfolio-box">
+                        <a href="https://github.com/manaswimishra/MotoGp-Data-Scraping" class="portfolio-box">
                             <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
