--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/MichaelSetyawan/RegensteinKaggleAshrae" class="portfolio-box">
+                        <a href="https://github.com/MichaelSetyawan/RegensteinKaggleAshrae/blob/master/Kaggle%20Report-%20Energy%20Prediction.pdf" class="portfolio-box">
                             <img src="img/portfolio/7.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
